tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_ISNOT_float.py
# pylint: disable=missing-function-docstring, missing-module-docstring
def compare_isnot_float(a : 'float', b : 'float'):
    return a is not b
